tests/NormalTests/paczka1/fuzzy1/45218116.err
Error in line 2: PL3vbcEUlbd A763 12,9
Error in line 7: XEY0GisUNt S902 24,7
Error in line 10: PL3vbcEUlbd A763 20,75
Error in line 8: PL3vbcEUlbd A982 39,7
Error in line 20: Wljq6JV S902 26,2
Error in line 25: A98^ A98^ 89,^
Error in line 28: F92DYP A982 8,9
Error in line 30: F92DYP A763 64,5
Error in line 17: PL3vbcEUlbd A763 48,8
Error in line 36: PL3vbcEUlbd A982 45,7
